// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesGrid function for fetch next films should be called after scrolling 1`] = `
<article
  className="movies_grid"
>
  <div
    className="movie_element"
    onClick={[Function]}
    role="presentation"
  >
    <img
      alt="Mobile Homes"
      className="movie_element_poster"
      src="https://image.tmdb.org/t/p/w500/of72rtl3j0C9yJMlSJZHXnaByz8.jpg"
    />
    <div
      className="wrapper_title_year"
    >
      <span
        className="title"
      >
        Mobile Homes
      </span>
      <span
        className="year"
      >
        2018
      </span>
    </div>
    <div
      className="genres"
    >
      <span
        className="genre"
      >
        Drama
      </span>
    </div>
  </div>
  <div
    className="movie_element"
    onClick={[Function]}
    role="presentation"
  >
    <img
      alt="Mademoiselle Paradis"
      className="movie_element_poster"
      src="https://image.tmdb.org/t/p/w500/k93b9hE30fdYG63atluVP5aDm2V.jpg"
    />
    <div
      className="wrapper_title_year"
    >
      <span
        className="title"
      >
        Mademoiselle Paradis
      </span>
      <span
        className="year"
      >
        2018
      </span>
    </div>
    <div
      className="genres"
    >
      <span
        className="genre"
      >
        History
      </span>
      <span
        className="genre"
      >
        Drama
      </span>
    </div>
  </div>
</article>
`;

exports[`MoviesGrid function for fetch next films should be called after scrolling 2`] = `
<article
  className="movies_grid"
>
  <div
    className="movie_element"
    onClick={[Function]}
    role="presentation"
  >
    <img
      alt="Mobile Homes"
      className="movie_element_poster"
      src="https://image.tmdb.org/t/p/w500/of72rtl3j0C9yJMlSJZHXnaByz8.jpg"
    />
    <div
      className="wrapper_title_year"
    >
      <span
        className="title"
      >
        Mobile Homes
      </span>
      <span
        className="year"
      >
        2018
      </span>
    </div>
    <div
      className="genres"
    >
      <span
        className="genre"
      >
        Drama
      </span>
    </div>
  </div>
  <div
    className="movie_element"
    onClick={[Function]}
    role="presentation"
  >
    <img
      alt="Mademoiselle Paradis"
      className="movie_element_poster"
      src="https://image.tmdb.org/t/p/w500/k93b9hE30fdYG63atluVP5aDm2V.jpg"
    />
    <div
      className="wrapper_title_year"
    >
      <span
        className="title"
      >
        Mademoiselle Paradis
      </span>
      <span
        className="year"
      >
        2018
      </span>
    </div>
    <div
      className="genres"
    >
      <span
        className="genre"
      >
        History
      </span>
      <span
        className="genre"
      >
        Drama
      </span>
    </div>
  </div>
</article>
`;

exports[`MoviesGrid renders correctly 1`] = `
<article
  className="movies_grid"
>
  <div
    className="movie_element"
    onClick={[Function]}
    role="presentation"
  >
    <img
      alt="Mobile Homes"
      className="movie_element_poster"
      src="https://image.tmdb.org/t/p/w500/of72rtl3j0C9yJMlSJZHXnaByz8.jpg"
    />
    <div
      className="wrapper_title_year"
    >
      <span
        className="title"
      >
        Mobile Homes
      </span>
      <span
        className="year"
      >
        2018
      </span>
    </div>
    <div
      className="genres"
    >
      <span
        className="genre"
      >
        Drama
      </span>
    </div>
  </div>
  <div
    className="movie_element"
    onClick={[Function]}
    role="presentation"
  >
    <img
      alt="Mademoiselle Paradis"
      className="movie_element_poster"
      src="https://image.tmdb.org/t/p/w500/k93b9hE30fdYG63atluVP5aDm2V.jpg"
    />
    <div
      className="wrapper_title_year"
    >
      <span
        className="title"
      >
        Mademoiselle Paradis
      </span>
      <span
        className="year"
      >
        2018
      </span>
    </div>
    <div
      className="genres"
    >
      <span
        className="genre"
      >
        History
      </span>
      <span
        className="genre"
      >
        Drama
      </span>
    </div>
  </div>
</article>
`;

exports[`MoviesGrid renders correctly 2`] = `
Array [
  <article
    className="movies_grid"
  >
    <div
      className="movie_element"
      onClick={[Function]}
      role="presentation"
    >
      <img
        alt="Mobile Homes"
        className="movie_element_poster"
        src="https://image.tmdb.org/t/p/w500/of72rtl3j0C9yJMlSJZHXnaByz8.jpg"
      />
      <div
        className="wrapper_title_year"
      >
        <span
          className="title"
        >
          Mobile Homes
        </span>
        <span
          className="year"
        >
          2018
        </span>
      </div>
      <div
        className="genres"
      >
        <span
          className="genre"
        >
          Drama
        </span>
      </div>
    </div>
    <div
      className="movie_element"
      onClick={[Function]}
      role="presentation"
    >
      <img
        alt="Mademoiselle Paradis"
        className="movie_element_poster"
        src="https://image.tmdb.org/t/p/w500/k93b9hE30fdYG63atluVP5aDm2V.jpg"
      />
      <div
        className="wrapper_title_year"
      >
        <span
          className="title"
        >
          Mademoiselle Paradis
        </span>
        <span
          className="year"
        >
          2018
        </span>
      </div>
      <div
        className="genres"
      >
        <span
          className="genre"
        >
          History
        </span>
        <span
          className="genre"
        >
          Drama
        </span>
      </div>
    </div>
  </article>,
  <div
    className="loading"
  >
    <div
      className="movies_grid_wrapper_loading"
      id="loading"
    >
      <div
        className="movies_grid_wrapper_loading"
      />
      <div
        className="movies_grid_wrapper_loading"
      />
      <div
        className="movies_grid_wrapper_loading"
      />
    </div>
    <div
      className="movies_grid_wrapper_loading_text"
      id="loading_text"
    >
      <span
        className="movies_grid_wrapper_loading_text_span"
      >
        LOADING
      </span>
    </div>
  </div>,
]
`;

exports[`MoviesGrid renders correctly 3`] = `
<article
  className="movies_grid"
>
  <span
    className="movies_grid__not_found"
  >
    No films found
  </span>
</article>
`;
